force-app/main/default/objects/Test_Report_Config__mdt/Test_Report_Config__mdt.object-meta.xml
<CustomObject>
    <description>Used for test class to be able to select the report Id relevant to it&apos;s org (report with email field)</description>
    <label>Test Report Config</label>
    <pluralLabel>Test Report Configs</pluralLabel>
</CustomObject>