force-app/main/default/objects/Test_Report_Config__mdt/fields/Expected_Email_Count__c.field-meta.xml
<CustomField>
    <fullName>Expected_Email_Count__c</fullName>
    <label>Expected Email Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>