force-app/main/default/objects/Test_Report_Config__mdt/fields/Test_Type__c.field-meta.xml
<CustomField>
    <fullName>Test_Type__c</fullName>
    <label>Test Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Email_Extraction</fullName>
                <default>true</default>
                <label>Email_Extraction</label>
            </value>
            <value>
                <fullName>Field_Detection</fullName>
            </value>
            <value>
                <fullName>Error_Handling</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>